// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the HelpCenter matches the snapshot 1`] = `
.c3 {
  color: #fff;
  background: #64a60a;
  min-width: 152px;
  text-shadow: 0 0 2px #000;
  overflow: visible;
  cursor: pointer;
}

.c3::-moz-focus-inner {
  border-width: 0;
}

.c3 span {
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  width: 100%;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  min-height: 48px;
  margin: 0;
  padding: 0 16px;
  padding: 0px 16px;
  border: 0;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 14px/24px "Open Sans", sans-serif;
  text-transform: uppercase;
  box-shadow: 0 2px 8px 0 rgba( 0, 0, 0, 0.3 );
  -webkit-transition: box-shadow 150ms ease-out;
  transition: box-shadow 150ms ease-out;
}

.c2:hover,
.c2:focus,
.c2:active {
  box-shadow: 0 4px 10px 0 rgba( 0, 0, 0, 0.2 ),inset 0 0 0 100px rgba( 0, 0, 0, 0.1 );
  color: #fff;
}

.c2:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  min-width: 0;
  padding: 0 2px;
  min-height: 32px;
}

.c1 svg {
  margin: 0 16px;
}

.c0 {
  margin: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .c2::after {
    display: inline-block;
    content: "";
    min-height: 48px;
  }
}

@media screen and ( max-width: 768px ) {
  .c0 {
    margin: 0 0 1em;
  }
}

<div
  className="yoast-help-center c0"
>
  <button
    aria-expanded={false}
    className="yoast-help-center__button c1 c2 c3"
    onClick={[Function]}
    type="button"
  >
    <span>
      Need help?
      <svg
        aria-hidden={true}
        className="yoast-svg-icon yoast-svg-icon-angle-down"
        fill="#fff"
        focusable="false"
        height="16"
        role="img"
        viewBox="0 0 1792 1792"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1395 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`the HelpCenter with props matches the snapshot 1`] = `
.c3 {
  color: #fff;
  background: #c30;
  min-width: 152px;
  overflow: visible;
  cursor: pointer;
}

.c3::-moz-focus-inner {
  border-width: 0;
}

.c3 span {
  display: inherit;
  -webkit-align-items: inherit;
  -webkit-box-align: inherit;
  -ms-flex-align: inherit;
  align-items: inherit;
  -webkit-box-pack: inherit;
  -webkit-justify-content: inherit;
  -ms-flex-pack: inherit;
  justify-content: inherit;
  width: 100%;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  min-height: 48px;
  margin: 0;
  padding: 0 16px;
  padding: 0px 16px;
  border: 0;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 14px/24px "Open Sans", sans-serif;
  text-transform: uppercase;
  box-shadow: 0 2px 8px 0 rgba( 0, 0, 0, 0.3 );
  -webkit-transition: box-shadow 150ms ease-out;
  transition: box-shadow 150ms ease-out;
}

.c2:hover,
.c2:focus,
.c2:active {
  box-shadow: 0 4px 10px 0 rgba( 0, 0, 0, 0.2 ),inset 0 0 0 100px rgba( 0, 0, 0, 0.1 );
  color: #fff;
}

.c2:active {
  -webkit-transform: translateY( 1px );
  -ms-transform: translateY( 1px );
  transform: translateY( 1px );
  box-shadow: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  min-width: 0;
  padding: 0 2px;
  min-height: 32px;
}

.c1 svg {
  margin: 0 16px;
}

.c0 {
  margin: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .c2::after {
    display: inline-block;
    content: "";
    min-height: 48px;
  }
}

@media screen and ( max-width: 768px ) {
  .c0 {
    margin: 0 0 1em;
  }
}

<div
  className="yoast-help-center c0"
>
  <button
    aria-expanded={false}
    className="yoast-help-center__button c1 c2 c3"
    onClick={[Function]}
    type="button"
  >
    <span>
      Need help?
      <svg
        aria-hidden={true}
        className="yoast-svg-icon yoast-svg-icon-angle-down"
        fill="#fff"
        focusable="false"
        height="16"
        role="img"
        viewBox="0 0 1792 1792"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M1395 736q0 13-10 23l-466 466q-10 10-23 10t-23-10l-466-466q-10-10-10-23t10-23l50-50q10-10 23-10t23 10l393 393 393-393q10-10 23-10t23 10l50 50q10 10 10 23z"
        />
      </svg>
    </span>
  </button>
</div>
`;
